; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_45.c_Usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_45.c_Usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [56 x i8] c"\0A\09\09---------------------------------------------------\0A\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"\09\09\09\09Dtors Security Research (DSR) \0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"\09\09\09\09Code by: Rave\0A\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"\09\09\09\09Mail: rave@dtors.net\0A\00", align 1
@.str.4 = private unnamed_addr constant [56 x i8] c"\09\09---------------------------------------------------\0A\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [40 x i8] c"\09\09-P local webserver server portnumber\0A\00", align 1
@.str.6 = private unnamed_addr constant [21 x i8] c"\09\09-g greatz to:\0A\0A\0A\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.4, i64 0, i64 0))
  %9 = load i32, i32* @stdout, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.5, i64 0, i64 0))
  %11 = load i32, i32* @stdout, align 4
  %12 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.6, i64 0, i64 0))
  %13 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.4, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
